# X-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  twikit.md
src/mcp_twikit/: twitter.py
src/x-mcp/: twitter.py
src/x_mcp/: twitter.py
