[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
packages = ["src/x-mcp"]
[project]
name = "x-mcp"
version = "0.2.0"
description = "X-mcp: Bridging Twitter and AI with the Model Context Protocol using Twikit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "lord-dubious", email = "chukwurahdavid@gmail.com" }
]
dependencies = [
    "fastmcp",
    "twikit",
    "requests",
]

[project.urls]
Homepage = "https://github.com/lord-dubious/x-mcp"

[project.scripts]
x-mcp = "x-mcp.twitter:mcp.run"
