[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
packages = ["src/x-mcp"]

[project]
name = "x-mcp"
version = "0.2.0"
description = "Twitter API integration through Twikit library"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "lord-dubious", email = "chukwurahdavid@gmail.com" }
]
dependencies = [
    "fastmcp>=0.4.1",
    "mcp>=1.2.0",
    "twikit>=2.2.1",
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/lord-dubious/x-mcp"

[project.scripts]
x-mcp = "x_mcp.twitter:mcp.run"
